RESOLVED FIXED265855
WebXROpaqueFramebuffer fails to restore textures and framebuffers
https://bugs.webkit.org/show_bug.cgi?id=265855
Summary WebXROpaqueFramebuffer fails to restore textures and framebuffers
Kimmo Kinnunen
Reported 2023-12-04 23:41:42 PST
WebXROpaqueFramebuffer fails to restore textures and framebuffers
Attachments
Kimmo Kinnunen
Comment 1 2023-12-04 23:42:03 PST
Kimmo Kinnunen
Comment 2 2023-12-04 23:44:22 PST
EWS
Comment 3 2023-12-05 14:23:53 PST
Committed 271572@main (72ac84bfa367): <https://commits.webkit.org/271572@main> Reviewed commits have been landed. Closing PR #21324 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.