WebXROpaqueFramebuffer fails to restore textures and framebuffers https://bugs.webkit.org/show_bug.cgi?id=265855 rdar://119139935

Reviewed by Dean Jackson.

Use correct binding points enums for BindFramebuffer.
Use correct texture for BindTexture.

* Source/WebCore/html/canvas/WebGLUtilities.h:
(WebCore::ScopedWebGLRestoreFramebuffer::~ScopedWebGLRestoreFramebuffer):
(WebCore::ScopedWebGLRestoreTexture::~ScopedWebGLRestoreTexture):

Canonical link: https://commits.webkit.org/271572@main